--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Shamil_Portfolio</title>
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/index.css" asp-append-version="true" />
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="~/css/sandbox.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/blog.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Shamil_Portfolio.styles.css" asp-append-version="true" />
+
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -52,10 +54,11 @@
 
     <div id="mobileSysSidebar" class="sys-sidebar d-lg-none">
         <div class="sys-sidebar-header">
-            <h5 class="m-0 text-white font-monospace">SYSTEM_STATUS</h5>
+            <h5 class="m-0 text-white">SYSTEM_STATUS</h5>
             <button id="sysSidebarClose" class="btn btn-sm text-white"><i class="fas fa-times"></i></button>
         </div>
         <div class="sys-sidebar-content">
+
             <div class="system-status-wrapper mb-4">
                 <div class="status-indicator">
                     <div class="pulsing-dot"></div>
